# Labacc_copilot

./: .env.example  .gitignore  CLAUDE.md  CONVERSION_REQUIREMENTS.txt  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_V3.md  INSTALL_MINERU.md  MINERU_STATUS.md  README.md  README_CN.md  STATUS.md  TESTING_GUIDELINES.md  TEST_SUITE_V3_SUMMARY.md  UNIFIED_TESTING_SUMMARY.md  check_config.py  config.yaml  deploy-guide.md  docker-compose.yml  nginx-users.conf  nginx.conf  pyproject.toml  pytest.ini  quick-start.md  quick_test.py  requirements.txt  run-local.sh  run-remote-background.sh  run-remote.sh  run_evaluation.py  run_unit_tests.py  setup-users.sh  start-dev.sh  start.sh  test-frontend.sh  test_agent_context.py  test_agents.py  test_context_fixes.py  test_conversion_with_file.py  test_file_conversion.py  (+6 more)
.specstory/: .project.json
data/: projects_metadata.json  users.json
data/admin_projects/project_superscc_e2f648/: README.md
data/admin_projects/uda_exp2_77c0df/: README.md
data/admin_projects/uda_exp2_new_de7471/: README.md
data/admin_projects/uda_pilot_3f94ff/: README.md
data/admin_projects/uda_pilot_fe57f5/: README.md
data/admin_projects/uda_pilot_new1_71e2ca/: README.md
data/admin_projects/uda_pilot_new_7ea8a6/: README.md
data/alice_projects/: README.md
data/alice_projects/exp_001_pcr_optimization/: README.md
data/alice_projects/exp_001_protocol_test/: README.md
data/alice_projects/exp_001_type_2025-08-12/: DeepResearch_Comprehensive Report on AI-Agentic Tools for Wet-Lab Biological Experimentation.md  README.md
data/alice_projects/exp_002_gel_electrophoresis/: README.md
data/alice_projects/exp_002_optimization/: README.md
data/alice_projects/exp_003_exp_002_optimized_dissociation/: README.md
data/alice_projects/exp_XXX_type_2025-08-12/: README.md
data/alice_projects/exp_unknown/: README.md
data/demo_project/: README.md
data/experiments/: README.md
data/extra_test_file/: For lung cancer tissue dissociation.docx
data/history/: README.md
data/project_001_alice_pcr/: README.md
data/project_002_bob_cancer/: README.md  Rebuttal draft assistance.docx
data/project_003_shared_protocols/: README.md
data/ref/: README.md
dev_plan/: content_analysis_implementation.md  implementation_phases.md  initial_plan.md  memory_implementation_summary.md  ui_enhancement_and_context_injection.md  v2_copilot_vision.md  v3_unified_file_processing.md
external_storage/lab_data/: projects_metadata.json  users.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
spec/: SPEC_REVIEW_REPORT.md  chat-integration.md  comprehensive-testing-framework-v3.md  file-management.md  memory-system.md  multi-user-workspace-system.md  practical-testing-framework.md  project-creation.md  react-agent-api.md  react-agent-tools-spec.md  renaming-support.md  testing-framework.md  testing_guide.md  unified-framework-v5.md  unified-testing-framework.md
spec/deprecated/: agent-data-flow-spec.md  readme-memory-system.md  unified-memory-agent-framework.md
src/agents/: __init__.py  advisor.py  analyzer.py  base_agent.py  explorer.py  orchestrator.py  quick_orchestrator.py  react_agent.py  researcher.py  smart_orchestrator.py
src/api/: __init__.py  app.py  auth_routes.py  debug_routes.py  file_conversion.py  file_registry.py  file_routes.py  project_routes.py  react_bridge.py  temp_bridge.py
src/components/: file_analyzer.py  file_intent_parser.py  image_analyzer.py  llm.py  smart_folder_manager.py
src/config/: config.py  keys.py  llm_config.json  logging_config.py  storage_config.py
src/graph/: __init__.py  app.py  nodes.py  state.py
src/memory/: __init__.py  auto_memory_updater.py  context_manager.py  file_summarizer.py  memory.py  memory_tools.py  readme_memory.py
src/models/: __init__.py  decision_card.py
src/projects/: __init__.py  auth.py  project_manager.py  session.py  storage.py  temp_manager.py
src/tools/: files.py
src/ui/: __init__.py  app.py  file_manager.py
src/utils/: check_config.py  test_cleanup.py
tests/: FILE_UPLOAD_TESTS.md  MULTIUSER_TEST_IMPORT_FIX.md  PROJECT_CREATION_FIX_REPORT.md  README.md  TEST_DEBUG_REPORT.md  TEST_UPDATES_SUMMARY.md  __init__.py  conftest.py  quick_test.py  run_all_tests.sh  run_evaluation.sh  run_multiuser_tests.py  run_tests.sh  run_tests_with_verification.py  test_admin_functionality.py  test_api_simple.py  test_comprehensive_integration.py  test_conversion_with_real_files.py  test_deep_research.py  test_explorer.py  test_file_conversion_agent.py  test_file_conversion_extended.py  test_file_conversion_integration.py  test_file_conversion_real.py  test_file_conversion_unit.py  test_full_memory_update.py  test_full_upload_workflow.py  test_hallucination_fix.py  test_image_analysis.py  test_llm.py  test_mineru_direct.py  test_read_converted.py  test_session_management.py  test_simple_memory.py  test_simple_memory_basic.py  test_upload_workflow.py  validate_multiuser_system.py
tests/agent_evaluation/: __init__.py  comprehensive_evaluator.py  conversation_scenarios.py  enhanced_test_runner.py  evaluator_agent.py  multiuser_test_cases.py  multiuser_test_runner.py  realistic_test_scenarios.py  reproduce_user_failures.py  run_evaluation.py  test_generator.py  test_runner.py  trajectory_evaluator.py
tests/fixtures/: mock_responses.json  sample.txt
tests/integration/: test_memory_update.py  test_upload_workflow.py
tests/reports/: bob_projects_restoration.md  comprehensive_results_20250814_161417.json  comprehensive_results_20250814_235207.json  comprehensive_summary_20250814_161417.json  comprehensive_summary_20250814_235207.json  detailed_results_20250813_224710.json  evaluation_summary.json  failed_tests_20250813_224710.json  root_cause_analysis.md  test_fixes_summary.md  test_summary_20250813_224710.json
tests/test_cases/: demo_suite.json  generated_testcasegenerator.json
tests/unit/: conftest.py  test_file_registry.py
tests/utils/: __init__.py  compatibility_layer.py  mock_llm.py  multiuser_test_utils.py  test_session.py
(+92 files in other folders)
